[package]
name = "nodejs"
version = "0.6.0"
authors = ["patr0nus <dk4rest@gmail.com>", "MarkusJx"]
license = "MIT"
description = "Embedding Node.js in Rust"
edition = "2021"
keywords = [ "node", "nodejs", "js", "javascript", "embedding" ]
homepage = "https://github.com/MarkusJx/rust-nodejs"
repository = "https://github.com/MarkusJx/rust-nodejs"
exclude = [ "/.github", "/.cargo", "/libnode" ]

[lib]
doctest = false # Doc-tests would fail because it doesn't read rustflags in .config.toml: https://github.com/rust-lang/cargo/issues/6650

[features]
full-icu = []
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
once_cell = "~1.19"
neon = { optional = true, version = "0.10.1", default-features = false, features = [ "napi-latest" ] }
libc = "~0.2"
napi = { version = "~2.16", features = [ "dyn-symbols" ], optional = true }
napi-derive = { version = "~2.16", optional = true }

[build-dependencies]
ring = "~0.17"
hex = "~0.4"
zip-extract = "~0.1"
strum = { version = "~0.26", features = [ "derive" ] }
anyhow = "~1.0"
regex = "~1.10"
octocrab = "~0.38"
tokio = "~1"
attohttpc = { version = "~0.28", default-features = false, features = [ "rustls" ] }
